<resources>

    <!-- AndroidManifest -->
    <string name="app_name">Stock Market</string>
    <string name="title_activity_fragment">FragmentActivity</string>

    <!-- activity_stock_detail -->
    <string name="button_five_year">5Y</string>
    <string name="button_two_year">2Y</string>
    <string name="button_one_year">1Y</string>
    <string name="button_six_month">6M</string>
    <string name="button_three_month">3M</string>
    <string name="button_one_month">1M</string>
    <string name="button_five_day">1W</string>
    <string name="title_activity_compare">CompareActivity</string>

    <!-- fragment_compare -->
    <string name="button_compare">Aktien vergleichen</string>

    <!-- fragment_stock -->
    <string name="add_stock">Add Stock</string>

    <!-- FragmentActivity-->
    <string name="add_stock_preamble">Add Stock</string>

    <!-- card_view_search / card_view_stock -->
    <string name="text_view_symbol">Symbol</string>
    <string name="text_view_company_name">Company Name</string>
    <string name="text_view_latest_price">Latest Price</string>
    <string name="text_view_change_percent">Change Percent</string>

    <!-- search_menu -->
    <string name="search_title">Search Title</string>

    <!-- navigation / bottom_menu -->
    <string name="navigation_stock">Aktien</string>
    <string name="navigation_compare">Vergleich</string>
    <string name="navigation_settings">Einstellungen</string>

    <!-- stock_menu -->
    <string name="refresh">Refresh</string>

    <!-- searchable -->
    <string name="search_hint">Search</string>

    <!-- Settings -->
    <string name="preference_delete_all">Alle Aktien löschen</string>
    <string name="preference_sort">Sortierung der Aktien</string>
    <string name="ascending">Aufsteigend</string>
    <string name="descending">Absteigend</string>
    <string name="highest">Höchster Preis</string>
    <string name="lowest">Niedrigster Preis</string>

    <string name="five_year">5 Jahre</string>
    <string name="two_year">2 Jahre</string>
    <string name="one_year">1 Jahr</string>
    <string name="six_month">6 Monate</string>
    <string name="three_month">3 Monate</string>
    <string name="one_month">1 Monat</string>
    <string name="five_day">5 Tage</string>

    <string name="fiveY">5Y</string>
    <string name="twoY">2Y</string>
    <string name="oneY">1Y</string>
    <string name="sixM">6M</string>
    <string name="threeM">3M</string>
    <string name="oneM">1M</string>
    <string name="fiveD">5D</string>

    <string name="preference_graphic">Zeitraum für Chart</string>

    <string name="pref_chart">pref_chart</string>

    <!-- SettingsFragment -->
    <string name="dialog_yes">Ja</string>
    <string name="dialog_no">Nein</string>
    <string name="dialog_delete_all_message">Möchten Sie wirklich alle Aktien löschen?</string>

    <!-- Repository -->
    <string name="message_comapre">Vergleichen aktuell nicht möglich</string>

    <string name="no_word">Keine Daten</string>
    <string name="no_data">Keine Daten verfügbar</string>
    <string name="search_field">Tippen Sie ein Aktien Symbol ein</string>
    <string name="cartesian_title">5 Jahres Chart</string>
    <string name="cartesian_axis">Wert in [$]</string>
    <string name="pref_sort">pref_sort</string>
    <string name="asc">asc</string>
    <string name="desc">desc</string>
    <string name="high">high</string>
    <string name="low">low</string>

    <string name="deleting">Deleting </string>
    <string name="update_all">Alle Aktien aktualisiert</string>
    <string name="delete_all">deleteAllStocks</string>
    <string name="no_selection">Keine Aktien ausgewählt</string>
    <string name="one_selection">Nur eine Aktie ausgewählt</string>
    <string name="no_internet_compare">Keine Internetverbindung vorhanden - Vergleichen von Aktien aktuell nicht möglich</string>
    <string name="no_internet_stock">Keine Internetverbindung vorhanden - Hinzufügen von Aktien aktuell nicht möglich</string>
    <string name="text_open">Open</string>
    <string name="text_high">High</string>
    <string name="text_low">Low</string>
    <string name="text_vol">Vol</string>
    <string name="text_PE">P/E</string>
    <string name="text_Mkt">Mkt Cap</string>
    <string name="text_WH">52W H</string>
    <string name="text_WL">52W L</string>
    <string name="text_Avg">Avg Vol</string>
    <string name="value_Open">Open</string>
    <string name="value_High">High</string>
    <string name="value_Low">Low</string>
    <string name="value_Vol">Vol</string>
    <string name="value_PE">PE</string>
    <string name="value_Mkt">Mkt</string>
    <string name="value_WH">WH</string>
    <string name="value_WL">WL</string>
    <string name="value_Avg">Avg</string>

</resources>