<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">

    <com.google.android.material.button.MaterialButtonToggleGroup
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toggle_button_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:checkedButton="@+id/button_five_day"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/button_five_day"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/button_five_day"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_one_month"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/button_one_month"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_three_month"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/button_three_month"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_six_month"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/button_six_month"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_one_year"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/button_one_year"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_two_year"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/button_two_year"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_five_year"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/button_five_year"/>

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.anychart.AnyChartView
        android:id="@+id/any_chart_view_stock"
        android:layout_width="match_parent"
        android:layout_height="520dp"
        android:layout_marginTop="45dp">

        <ProgressBar
            android:id="@+id/progress_bar_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </com.anychart.AnyChartView>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/horizontal_scroll_view"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="65dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/text_open"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/text_open"
                        android:textAlignment="textStart"
                        android:textColor="@color/black" />
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/text_high"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/text_high"
                        android:textAlignment="textStart"
                        android:textColor="@color/black" />
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/text_low"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/text_low"
                        android:textAlignment="textStart"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="?android:attr/listDivider">
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/value_Open"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/value_Open"
                        android:textAlignment="textEnd"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/value_High"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/value_High"
                        android:textAlignment="textEnd"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/value_Low"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/value_Low"
                        android:textAlignment="textEnd"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="65dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/text_vol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/text_vol"
                        android:textAlignment="textStart"
                        android:textColor="@color/black" />
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/text_PE"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/text_PE"
                        android:textAlignment="textStart"
                        android:textColor="@color/black" />
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/text_Mkt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/text_Mkt"
                        android:textAlignment="textStart"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="?android:attr/listDivider">
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/value_Vol"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/value_Vol"
                        android:textAlignment="textEnd"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/value_PE"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/value_PE"
                        android:textAlignment="textEnd"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/value_Mkt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/value_Mkt"
                        android:textAlignment="textEnd"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="65dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/text_WH"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/text_WH"
                        android:textAlignment="textStart"
                        android:textColor="@color/black" />
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/text_WL"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/text_WL"
                        android:textAlignment="textStart"
                        android:textColor="@color/black" />
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/text_Avg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/text_Avg"
                        android:textAlignment="textStart"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="?android:attr/listDivider">
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/value_WH"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/value_WH"
                        android:textAlignment="textEnd"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/value_WL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/value_WL"
                        android:textAlignment="textEnd"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/value_Avg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/value_Avg"
                        android:textAlignment="textEnd"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

        </HorizontalScrollView>


</RelativeLayout>