<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">

    <com.google.android.material.button.MaterialButtonToggleGroup
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toggle_button_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:checkedButton="@+id/button_five_day"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/button_five_day"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/button_five_day"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_one_month"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/button_one_month"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_three_month"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/button_three_month"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_six_month"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/button_six_month"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_one_year"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/button_one_year"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_two_year"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/button_two_year"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_five_year"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/button_five_year"/>

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.anychart.AnyChartView
        android:id="@+id/any_chart_view_stock"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp">

        <ProgressBar
            android:id="@+id/progress_bar_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </com.anychart.AnyChartView>



</RelativeLayout>